# scirag-agent

./: .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml
configs/: models.yaml  pipeline.yaml
docs/: Makefile  conf.py  demo.tape  index.md
docs/api/: agents.md  cite.md  config.md  index.md  ingest.md  llm.md  projects.md  retrieval.md  sources.md
docs/guide/: architecture.md  configuration.md  installation.md  quickstart.md  shell-commands.md
src/scirag/: cite.py  cli.py  config.py  projects.py  shell.py  ui.py
src/scirag/agents/: pipeline.py  synthesize.py
src/scirag/graph/: state.py
src/scirag/ingest/: index.py
src/scirag/llm/: router.py
src/scirag/mcp_server/: README.md  server.py
src/scirag/neuro/: entities.py
src/scirag/retrieval/: retriever.py
src/scirag/sources/: article.py  biorxiv.py  mendeley.py  pdf.py  pubmed.py  zotero.py
src/scireg/: cli.py  config.py  projects.py  shell.py
src/scireg/agents/: synthesize.py
src/scireg/graph/: state.py
src/scireg/ingest/: index.py
src/scireg/llm/: router.py
src/scireg/mcp_server/: server.py
src/scireg/neuro/: entities.py
src/scireg/retrieval/: retriever.py
src/scireg/sources/: pdf.py  pubmed.py
tests/: test_config.py  test_graph.py  test_mcp.py  test_mendeley.py  test_neuro_entities.py  test_pdf.py  test_pipeline.py  test_pubmed.py  test_retriever.py  test_synthesize.py  test_zotero.py
