[project]
name = "scirag-agent"
version = "0.1.0"
description = "Multi-agent RAG for scientific literature retrieval, with neuroscience-specific agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # indexing / retrieval
    "llama-index-core>=0.11.0",
    "llama-index-vector-stores-lancedb>=0.2.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "lancedb>=0.13.0",
    "pandas>=2.0.0",
    "llama-index-retrievers-bm25>=0.3.0",
    "rank-bm25>=0.2.2",
    # LLM routing (open-source + frontier behind one API)
    "litellm>=1.50.0",
    # data sources
    "httpx>=0.27.0",
    "biopython>=1.84",          # Entrez E-utilities helpers
    "pypdf>=4.0.0",             # PDF text extraction for manual imports + Unpaywall PDFs
    # plumbing
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
eval = ["ragas>=0.2.0"]
ui = ["chainlit>=2.0.0"]
dev = ["pytest>=8.0", "ruff>=0.6.0", "pre-commit>=3.0.0"]

[project.scripts]
scirag = "scirag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scirag"]

[tool.ruff]
line-length = 100
