[project]
name = "scirag-agent"
version = "0.1.0"
description = "Multi-agent RAG for scientific literature retrieval, with neuroscience-specific agents"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    # indexing / retrieval
    "llama-index-core>=0.11.0",
    "llama-index-vector-stores-lancedb>=0.2.0",
    "llama-index-embeddings-ollama>=0.3.0",
    "lancedb>=0.13.0",
    "pandas>=2.0.0",
    "llama-index-retrievers-bm25>=0.3.0",
    "rank-bm25>=0.2.2",
    # LLM routing (open-source + frontier behind one API)
    "litellm>=1.50.0",
    # data sources
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",         # browser-impersonating fetch for Cloudflare-gated bioRxiv full text
    "biopython>=1.84",          # Entrez E-utilities helpers
    "pypdf>=4.0.0",             # PDF text extraction for manual imports + Unpaywall PDFs
    # plumbing
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
eval = ["ragas>=0.2.0"]
ui = ["chainlit>=2.0.0"]
rerank = ["sentence-transformers>=3.0.0"]   # cross-encoder reranking (bge-reranker-v2-m3); pulls torch
docs = [   # Sphinx + MyST docs (built on Read the Docs); heavy deps are mocked in conf.py
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "linkify-it-py>=2.0",   # the MyST `linkify` extension (bare URLs -> links)
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
]
all = ["scirag-agent[mcp,eval,ui]"]   # all optional features; `uv sync --extra all`

# Dev tooling is a dependency-group (PEP 735), so a plain `uv sync` installs it by
# default — that's what makes the ruff/pre-commit git hook work out of the box.
[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6.0", "pre-commit>=3.0.0"]

[project.scripts]
scirag = "scirag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scirag"]

# Ship the default YAML configs inside the package so a `uv tool install` (no
# source checkout on disk) can still load them; config.py resolves these as the
# fallback after the dev tree and ~/.scirag-agent/configs overrides.
[tool.hatch.build.targets.wheel.force-include]
"configs" = "scirag/configs"
# Ship the Chainlit welcome screen inside the package so `scirag ui` finds it
# even when launched from an arbitrary cwd or installed without a source
# checkout (do_llm_ui anchors the subprocess cwd to the package dir then).
"chainlit.md" = "scirag/chainlit.md"
# Chainlit config (restricts the upload picker to PDFs) — same reason.
".chainlit/config.toml" = "scirag/.chainlit/config.toml"

[tool.ruff]
line-length = 100
